# SimpleTranscribe-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  deployment.yml  rust-actions.yml  rust.yml
examples/: usage_example.rs  usage_example_chinese.rs
src/: lib.rs  main.rs  model_handler.rs  transcriber.rs
src/audio_parser/: audio_parser.rs  mod.rs
src/model/: mod.rs  model.rs  model_handler.rs
src/transcriber/: mod.rs  transcriber.rs  whisper.rs
