[package]
name = "simple_transcribe_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = "0.10.0"
reqwest = "0.11.23"
tokio = {version = "1.35.1", features = ["full"]}

[dev-dependencies]
tempfile = "3.9.0" 
