[workspace]
exclude = ["examples/usage_example.rs"]

[package]
name = "simple_transcribe_rs"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Audio to text transcription library written in rust that utilizes whisper-rs bindings."
homepage = "https://github.com/Marble879/SimpleTranscribe-rs"
repository = "https://github.com/Marble879/SimpleTranscribe-rs"
readme = "README.md" 
keywords = ["audio", "transcription", "whisper", "openai", "transcribe"]
categories = ["multimedia::audio"]
exclude = [".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = "0.11.1"
reqwest = "0.11.23"
tokio = {version = "1.35.1", features = ["full"]}
phf = {version = "0.11.2", features = ["macros"]}
symphonia = {version = "0.5.3", features=["mp3"]}

[dev-dependencies]
tempfile = "3.9.0" 
